--- a/src/rocm_docs/rocm_docs_theme/flavors/instinct/footer.jinja
+++ b/src/rocm_docs/rocm_docs_theme/flavors/instinct/footer.jinja
@@ -1,1 +1,5 @@
 {% macro license_link() -%}{%- endmacro -%}
+
+<div id="rdc-watermark-container">
+    <img id="rdc-watermark" src="{{ pathto('_static/images/alpha-watermark.svg',1) }}" alt="DRAFT watermark"/>
+</div>
